...
    },
    "locations.title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Locations"
          }
        }
      }
    },
    "notice.back_online" : {
      "localizations" : {
...
